Home Page alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -206,9 +206,9 @@ section{
 }
 
 .hero {
-  position: fixed;
+  position: relative;
   margin-top:100px;
-  left:10%;
+  padding-left:10%;
 }
 
 
